# Lang3

./: .clang-format  .clang-tidy  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  README.md  justfile
.github/: copilot-instructions.md
.github/workflows/: cmake-multi-platform.yml
apps/divider/: CMakeLists.txt
apps/divider/src/: main.cpp
apps/lang3/: CMakeLists.txt
apps/lang3/src/: main.cpp
cmake/: CommonUtils.cmake  ExecutableTemplate.cmake  LibraryTemplate.cmake  TestTemplate.cmake  libstdc++.modules.json
doc/: CMakeLists.txt  main.tex
doc/diagrams/: CMakeLists.txt
examples/: black_jack.l3  demo.l3  eval.l3  game_of_life.l3  rle.l3  simple.l3
examples/perf/: README.md  alloc_stress.l3  bench_compare.sh  call_tight.l3  chained_cmp.l3  closure_stress.l3  const_fold.l3  dispatch_stress.l3  string_concat.l3  vec_stress.l3
extras/vim/: README.md
extras/vim/ftdetect/: lang3.vim
extras/vim/syntax/: lang3.vim
plan/: 01_low_hanging_fruit.md  02_medium_complexity.md  03_high_complexity.md  04_bugs.md  optimizations.md
src/ast/: CMakeLists.txt
src/ast/include/ast/: ast.hpp  printing.hpp
src/ast/include/ast/nodes/: block.hpp  expression.hpp  expression_list.hpp  function.hpp  identifier.hpp  if_else.hpp  literal.hpp  operator.hpp  printing.hpp  statement.hpp  table.hpp
src/ast/src/: array.cpp  array.cppm  assignment.cpp  assignment.cppm  ast.cpp  ast.cppm  ast_printer.cppm  block.cpp  block.cppm  declaration.cpp  declaration.cppm  dot_printer.cppm  expression.cpp  expression.cppm  expression_list.cpp  expression_list.cpp.bak  expression_list.cppm  expression_parts.cpp  expression_parts.cppm  for_loop.cpp  for_loop.cppm  format.cppm  format.cppm.bak  function.cpp  function.cppm  function_call.cpp  function_call.cppm  identifier.cpp  identifier.cppm  if_else.cpp  if_else.cppm  last_statement.cpp  last_statement.cppm  literal.cpp  literal.cppm  literal_parts.cppm  loop.cppm  mutability.cppm  name_assignment.cppm  name_assignment.cppm.bak  (+19 more)
src/bytecode/: CMakeLists.txt
src/bytecode/src/: bytecode.cpp  bytecode.cppm
src/cli/: CMakeLists.txt
src/cli/include/cli/: cli.hpp
src/cli/src/: cli.cpp  cli.cppm
src/compiler/: CMakeLists.txt
src/compiler/src/: compiler.cpp  compiler.cppm  peephole.cpp  peephole.cppm
src/division/: CMakeLists.txt
src/location/: CMakeLists.txt
src/location/src/: location.cpp  location.cppm
src/parser/: CMakeLists.txt
src/parser/include/lexer/: flex.hpp  lexer.hpp  location_t.hh  tokens.hpp
src/parser/include/parser/: ast.hpp  lexer.hpp
src/parser/include/parser/nodes/: block.hpp  detail.hpp  expression.hpp  function.hpp  identifier.hpp  literal.hpp  operator.hpp  printing.hpp  statement.hpp  table.hpp
src/parser/src/: ast.cpp  lexer.cpp  lexer.l  parser.cpp  parser.y
src/runtime/: CMakeLists.txt
src/runtime/src/: chunk_list.cppm  chunked_allocator.cppm  error.cpp  error.cppm  formatting.cppm  function.cpp  function.cppm  gc_value.cpp  gc_value.cppm  heap.cpp  heap.cppm  heap_cell.cpp  heap_cell.cppm  heap_data.cpp  heap_data.cppm  identifier.cppm  mutability.cppm  primitive.cpp  primitive.cppm  ref_value.cpp  ref_value.cppm  runtime.cppm  stack_value.cpp  stack_value.cppm  storage.cpp  storage.cppm  upvalue.cpp  upvalue.cppm  value.cpp  value.cppm
src/utils/: CMakeLists.txt
src/utils/include/utils/: accessor.h  cow.h  debug.h  format.h  match.h  types.h  utils.hpp  visit.h
src/utils/src/: cow.cppm  debug.cpp  debug.cppm  format.cppm  functional.cppm  match.cppm  ranges.cppm  types.cppm  utils.cppm
src/vm/: CMakeLists.txt
src/vm/include/vm/: error.hpp  format.hpp  function.hpp  identifier.hpp  ref_value.hpp  scope.hpp  stack.hpp  storage.hpp  types.hpp  value.hpp  vm.hpp
src/vm/src/: builtins.cpp  builtins.cppm  chunk_list.cppm  error.cpp  error.cppm  formatting.cppm  function.cpp  function.cppm  gc_value.cpp  gc_value.cppm  identifier.cppm  mutability.cppm  primitive.cpp  primitive.cppm  ref_value.cpp  ref_value.cppm  scope.cpp  scope.cppm  stack.cpp  stack.cppm  storage.cpp  storage.cppm  types.cpp  value.cpp  value.cppm  variable.cpp  variable.cppm  vm.cpp  vm.cppm  vm_evaluate.cpp  vm_execute.cpp  vm_other.cpp
src/vm/src/vm/: builtins.hpp  call_stack.cppm  execution_state.cpp  execution_state.cppm  format.hpp  function.hpp  loop_guard.cppm
test/: CMakeLists.txt
test/snapshot/: CMakeLists.txt  README.md  snapshot_tests.cpp
test/snapshot/expected/chained_comparison_sideeffect/: ast.txt  bytecode.txt  output.txt
test/snapshot/expected/closures_recursive_factory/: ast.txt  bytecode.txt  output.txt
test/snapshot/expected/closures_stateful/: ast.txt  bytecode.txt  output.txt
test/snapshot/expected/comparisons_and_logic/: ast.txt  bytecode.txt  output.txt
test/snapshot/expected/control_flow/: ast.txt  bytecode.txt  output.txt
test/snapshot/expected/currying_partial_application/: ast.txt  bytecode.txt  output.txt
test/snapshot/expected/expressions/: ast.txt  bytecode.txt  output.txt
test/snapshot/expected/functions_closures/: ast.txt  bytecode.txt  output.txt
test/snapshot/expected/indexing/: ast.txt  bytecode.txt  output.txt
test/snapshot/expected/indexing_assignments/: ast.txt  bytecode.txt  output.txt
test/snapshot/expected/indexing_bounds/: ast.txt  bytecode.txt  output.txt
test/snapshot/expected/indexing_invalid_types/: ast.txt  bytecode.txt  output.txt
test/snapshot/expected/indexing_negative/: ast.txt  bytecode.txt  output.txt
test/snapshot/expected/indexing_nested_error/: ast.txt  bytecode.txt  output.txt
test/snapshot/expected/mutable_references/: ast.txt  bytecode.txt
test/snapshot/inputs/: chained_comparison_sideeffect.l3  closures_recursive_factory.l3  closures_stateful.l3  comparisons_and_logic.l3  control_flow.l3  currying_partial_application.l3  expressions.l3  functions_closures.l3  indexing.l3  indexing_assignments.l3  indexing_bounds.l3  indexing_invalid_types.l3  indexing_negative.l3  indexing_nested_error.l3  mutable_references.l3  range_for.l3  recursion_direct.l3  recursion_indirect.l3
test/unit/: CMakeLists.txt
test/unit/cli/: cli_tests.cpp
(+6 files in other folders)
